# python-template

./: .pre-commit-config.yaml  pyproject.toml
template_python/: main.py  say_hi.py
tests/: test_say_hi.py
