[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["mal1kc <59576495+mal1kc@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "template_python"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
