[project]
name = "python-template"
version = "0.1.0"
description = "python-template"
authors = [
    { name = "mal1kc", email = "59576495+mal1kc@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]
